tests/compile/func_wrong_arg_num.stderr
error: Type constraints for function "snake_case(arg)" are not satisfied
 --> tests/compile/func_wrong_arg_num.rs:3:25
  |
3 | compose_idents!(my_fn = snake_case(fooBar, barBaz), {
  |                         ^^^^^^^^^^

error[E0425]: cannot find function `foo_baz` in this scope
  --> tests/compile/func_wrong_arg_num.rs:10:16
   |
10 |     assert_eq!(foo_baz(), 42);
   |                ^^^^^^^ not found in this scope
